--- a/Forum/message.input.inc.html
+++ b/Forum/message.input.inc.html
@@ -3,10 +3,15 @@
 	<form id='message_form' method='post' role='form' onsubmit='return message_submit()'>
 
 		<input id='message_thread_id' name='message_thread_id' type='hidden'></input>
+		
+		<div id='thread_name_div' class='form-group' style='display:none'>
+			<label for='thread_name'>Thread Name:</label>
+			<input id='thread_name' name='thread_name' type='text' class='form-control' disabled required></input>
+		</div>
 
 		<div class='form-group'>
 			<label for='message_text'>Message (max 140 characters):</label>
-			<textarea class='form-control' style='width:100%' maxlength='140' rows='3' id='message_text' name='message_text'></textarea>
+			<textarea class='form-control' style='width:100%' maxlength='140' rows='3' id='message_text' name='message_text' required></textarea>
 		</div>
 
 		<button type='submit' class='btn btn-primary'>Submit</button>
@@ -19,6 +24,7 @@
 			$.post('message.insert.ajax.php', serialized_data, function(result) {
 				$("<div style='display:none'></div>").html(result).appendTo("#thread_div").show("slide");
 				$("#message_text").val("");
+				$("#thread_name").val("");
 			});
 			return false;
 		}
